--- a/main.html
+++ b/main.html
@@ -3,11 +3,89 @@
 <html>
 
 <head>
+	<link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h1>John Wick</h1>
+	</header>
+	<main>
+		<section>
+			<nav>
+				<a href="#actor" id="nav-actor" class="nav-link">Actors</a>
+				<a href="#quote" id="nav-quote" class="nav-quote">Quotes</a>
+			</nav>
+		</section>
+		<section class="row mx-4">
+			<section class="col-8">
+				 <!-- Summary Section -->
+          <section id="summary">
+            <summary>
+              <p>
+                Legendary assassin John Wick (Keanu Reeves) retired from his
+                violent career after marrying the love of his life. Her sudden
+                death leaves John in deep mourning. When sadistic mobster Iosef
+                Tarasov (Alfie Allen) and his thugs steal John's prized car and
+                kill the puppy that was a last gift from his wife, John
+                unleashes the remorseless killing machine within and seeks
+                vengeance. Meanwhile, Iosef's father (Michael Nyqvist) -- John's
+                former colleague -- puts a huge bounty on John's head.
+              </p>
+            </summary>
+          </section>
+
+				
+          <!-- Actor Section -->
+
+          <section id="actor" class="mx-4">
+            <span class="fs-2">Actors</span>
+            <p>
+              John Wick is portrayed by Keanu Reeves, who delivers a stunning
+              performance in the lead role. Other notable actors in the movie
+              include Ian McShane and Willem Dafoe.
+            </p>
+          </section>
+
+				<!-- Quote Section -->
+
+          <section id="quote" class="mx-4">
+            <span class="fs-2">Favourite Quotes</span>
+            <blockquote>
+              &ldquo;My name can't be *that* tough to pronounce!&rdquo;
+              <cite> - Keanu Reeves</cite>
+            </blockquote>
+          </section>
+			</section>
+			 <section
+          id="aside"
+          class="col-4 d-flex justify-content-center align-items-center"
+        >
+          <aside>
+            <h3>IMDB Rating & Release Date</h3>
+            <p class="d-flex">
+              IMDB Rating:
+              <img
+                src="https://cdn-icons-png.flaticon.com/128/1828/1828884.png"
+                alt="star icon"
+                width="20"
+                height="20"
+                class="mx-2"
+              />
+              7.4/10
+            </p>
+            <p class="d-flex">Release Date: October 24, 2014</p>
+          </aside>
+        </section>
+		</section>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
