--- a/main.html
+++ b/main.html
@@ -86,6 +86,7 @@
         </section>
 		</section>
 	</main>
+	<footer class="mx-4 my-5">Produced by: Basil Iwanyk</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
